<resources>
    <string name="app_name">surfcart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="product_description_goes_here">Product description goes here</string>
    <string name="product_title">Wireless Headphones</string>

    <!-- Strings for fragment_registration.xml -->
    <string name="label_back">← Back</string>
    <string name="title_create_account">Create Account</string>
    <string name="subtitle_join_as_customer">Join as a customer</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_create_account">Create Account</string>

    <!-- Strings for fragment_log_in.xml -->
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Log in to continue</string>
    <string name="login_forget_password">Forget password?</string>
    <string name="login_button_text">Log In</string>
    <string name="login_signup_link">Don\'t have an account? Create Account</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="similar_products">Similar Products</string>
</resources>