<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="22sp"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <!-- Subtitle (Optional) -->
        <TextView
            android:id="@+id/tvLoginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:layout_marginBottom="24dp" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayoutLogin"
            style="@style/MyOutlinedTextInputLayout"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                style="@style/MyTextInputEditText"
                android:inputType="textEmailAddress"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayoutLogin"
            style="@style/MyOutlinedTextInputLayout"
            android:layout_marginBottom="24dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                style="@style/MyTextInputEditText"
                android:inputType="textPassword"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forget Password? -->
        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="24dp"/>
        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="16dp" />

        <!-- Create Account Link -->
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup_link"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</ScrollView>